adding reload script to debug

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Coffee of Angels</title>
+    <script type="text/javascript">
+  var timeout = setTimeout("location.reload(true);",600000);
+  function resetTimeout() {
+    clearTimeout(timeout);
+    timeout = setTimeout("location.reload(true);",600000);
+  }
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,4 +47,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script type="text/javascript">
+    var timeout = setTimeout("location.reload(true);",600000);
+    function resetTimeout() {
+      clearTimeout(timeout);
+      timeout = setTimeout("location.reload(true);",600000);
+    }
+  </script>
 </html>
